--- a/src/css/responsive.scss
+++ b/src/css/responsive.scss
@@ -5,6 +5,17 @@ $breakpoints: (
   xlarge: $container-xlarge,
   xxlarge: $container-xxlarge
 );
+@media (max-width: 1280px){
+    .header {
+        .container-icons {
+            .menu {
+                .instagram, .linkedin, .facebook {
+                    display: none;
+                }
+            }
+        }
+    }
+}
 
 @media (max-width: 1200px){
     .services {
@@ -51,6 +62,22 @@ $breakpoints: (
 }
 
 @media (max-width: 1140px){
+    .header {
+        .container-logo {
+            left: 20px;
+
+            .logo {
+                .text {
+                    display: none;
+                }
+            }
+        }
+        
+        .container-icons {
+            right: 20px;
+        }
+    }
+
     .hero-slider {
         .container {
             h1 {
@@ -203,10 +230,34 @@ $breakpoints: (
         }
 
         .small-7 {
-            width: 100%;
+            width: 90%;
             margin-top: 0;
         }
     }
+}
+
+@media (max-width: 940px){
+    .header {
+        .container-logo {
+            width: auto;
+        }
+
+        .container-icons {
+            display: none;
+        }
+        
+        .small-3 {
+            .logo {
+                .text {
+                    display: block;
+                }
+            }
+        }
+        .small-6 {
+            display: none;
+        }
+    }
+
 }
 
 @media (max-width: 800px){
