--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -3,17 +3,19 @@ $font-primary: 'Lato';
 
 
 // colors
-$color-primary: black;
+$color-primary: #212121;
 $color-secondary: black;
+$color-active: #b8144c;
 
 $instagram: #a01b5b;
 $linkedin: #0074ae;
 $facebook: #485a96;
 
+
+
+// sizes
 $container-small: 420px;
 $container-medium: 768px;
 $container-large: 980px;
 $container-xlarge: 1170px;
 $container-xxlarge: 1440px;
-
-// images
