--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -17,7 +17,7 @@
 
 h2 {
     font-size: 35px;
-    color: #212121;
+    color: $color-primary;
     font-weight: bold;
     line-height: 1.167;
 }
@@ -65,26 +65,30 @@ h4 {
         }
     }
 
-    .menu {
-        li {
-            a {
-                font-size: 18px;
-                color: #212121;
-                font-weight: bold;
-                text-transform: uppercase;
-                line-height: 1.389;
-                text-align: center;
+    .small-6 {
+        width: 625px;
+        margin: 0 auto;
 
-                &.is-active, &:hover {
-                    color: rgb(184, 20, 76);
+        .menu {
+            li {
+                a {
+                    font-size: 18px;
+                    color: $color-primary;
+                    font-weight: bold;
+                    text-transform: uppercase;
+                    line-height: 1.389;
+                    text-align: center;
+    
+                    &.is-active, &:hover {
+                        color: $color-active;
+                    }
                 }
             }
         }
-    }
 
-    .small-6 {
-        width: 620px;
-        margin: 0 auto;
+        .is-dropdown-submenu {
+            border: none;
+        }
     }
 
     .container-icons {
@@ -128,7 +132,7 @@ h4 {
                 text-transform: uppercase;
                 display: inherit;
                 align-items: center;
-                color: #212121;
+                color: $color-primary;
                 font-weight: 400;
 
                 &.is-active, &:hover {
@@ -152,6 +156,66 @@ h4 {
                     background: $facebook;
                 }
             }
+        }
+    }
+
+    .off-canvas {
+        background: white;
+
+        .close-button {
+            z-index: 10;
+            img {
+                width: 20px;
+                height: 20px;
+
+            }
+        }
+
+
+        .menu {
+            li {
+                float: none;
+    
+                a {
+                    color: $color-primary;
+                    text-transform: uppercase;
+    
+                    &.is-active, &:hover {
+                        color: $color-active;
+                    }
+                }
+            }
+        }
+    
+        .mobile-languages {
+            width: 100%;
+            height: 50px;
+            align-items: center;
+            background: #f4f2f2;
+        }
+
+        .vertical, .drilldown {
+            width: 100%;
+            text-align: left;
+        }
+    }
+    
+    .title-bar {
+        position: absolute;
+        right: 20px;
+    
+        span {
+            color:  $color-primary;
+            font-size: 18px;
+            font-weight: 700;
+            line-height: 25px;
+            text-transform: uppercase;
+        }
+    
+        img {
+            margin-top: -4px;
+            width: 20px;
+            height: 20px;
         }
     }
 }
@@ -405,7 +469,7 @@ h4 {
     width: 100%;
 
     h4 {
-        color:  #212121;
+        color:  $color-primary;
         position: relative;
         z-index: 1;
         text-align: center;
@@ -715,7 +779,7 @@ h4 {
             padding: 10px 0 0 65px;
 
             .title {
-                color:  #212121;
+                color: $color-primary;
                 font-size: 32px;
                 font-weight: 800;
                 line-height: 34px;
