--- a/src/css/responsive.scss
+++ b/src/css/responsive.scss
@@ -1,10 +1,4 @@
-$breakpoints: (
-  small: $container-small,
-  medium: $container-medium,
-  large: $container-large,
-  xlarge: $container-xlarge,
-  xxlarge: $container-xxlarge
-);
+
 @media (max-width: 1280px){
     .header {
         .container-icons {
@@ -18,6 +12,9 @@ $breakpoints: (
 }
 
 @media (max-width: 1200px){
+    html {
+        font-size: 85%;
+    }
     .services {
         height: auto;
         padding-bottom: 93px;
@@ -62,6 +59,10 @@ $breakpoints: (
 }
 
 @media (max-width: 1140px){
+    html {
+        font-size: 75%;
+    }
+
     .header {
         .container-logo {
             left: 20px;
@@ -90,9 +91,7 @@ $breakpoints: (
         .grid-x {
             .cell {
                 .title {
-                    font-size: 26px;
-                    line-height: 26px;
-                    bottom: 20px;
+                    ///
                 }
             }
         }
@@ -125,6 +124,17 @@ $breakpoints: (
 }
 
 @media (max-width: 1023px){
+    html {
+        font-size: 70%;
+    }
+    .projects {
+        .grid-x {
+            .cell {
+                padding-bottom: calc((50% - 1.875rem)*0.75);
+            }
+        }
+    }
+
     .why {
         padding-top: 63px;
 
@@ -147,7 +157,6 @@ $breakpoints: (
         }
     }
 }
-
 
 @media (max-width: 980px){
     .hero-slider {
@@ -245,6 +254,10 @@ $breakpoints: (
 }
 
 @media (max-width: 940px){
+    html {
+        font-size: 70%;
+    }
+
     .header {
         .container-logo {
             width: auto;
@@ -257,7 +270,7 @@ $breakpoints: (
         .small-3 {
             .logo {
                 .text {
-                    display: block;
+                    display: table-cell;
                 }
             }
         }
@@ -279,18 +292,13 @@ $breakpoints: (
             }
         }
     }
-
-    .projects {
-        .grid-x {
-            .cell {
-                width: calc(50% - 1.3rem);
-                padding-bottom: calc((50% - 1.875rem)*0.75);
-            }
-        }
-    }
 }
 
 @media (max-width: 768px){
+    html {
+        font-size: 65%;
+    }
+
     .hero-slider {
         .container {
             h1 {
@@ -306,13 +314,11 @@ $breakpoints: (
         .grid-x {
             .cell {
                 .title {
-                    font-size: 20px;
-                    bottom: 20px;
+                    //font-size: 10%;
                 }
 
                 .description {
                     font-size: 15px;
-                    line-height: 15px;
                 }
             }
         }
@@ -357,11 +363,11 @@ $breakpoints: (
     .projects {
         .grid-x {
             .cell {
-                width: calc(100% - 1.875rem);
                 padding-bottom: calc((100% - 1.875rem)*0.75);
             }
         }
     }
+
 
     .contact {
         padding: 30px 0 0 0;
