--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -400,19 +400,19 @@ h4 {
 }
 
 .services {
-    width: 100%;
-    height: 375px;
+
     background:  #b7236a;
     position: relative;
     z-index: 1;
+    padding: 0px 50px 100px 50px;
 
     #triangle-left {
         position: absolute;
         bottom: 0;
         right: 636px;
         height: 0;
-        border-bottom: 697px solid #af246f;
-        border-left: 737px solid transparent;
+        border-bottom: 740px solid #af246f;
+        border-left: 780px solid transparent;
         z-index: -1;
     }
 
@@ -421,8 +421,8 @@ h4 {
         bottom: 0;
         right: 318px;
         height: 0;
-        border-bottom: 697px solid #a12577;
-        border-left: 737px solid transparent;
+        border-bottom: 740px solid #a12577;
+        border-left: 780px solid transparent;
         z-index: -1;
     }
 
@@ -431,8 +431,8 @@ h4 {
         bottom: 0;
         right: 0;
         height: 0;
-        border-bottom: 697px solid #8f2782;
-        border-left: 737px solid transparent;
+        border-bottom: 740px solid #8f2782;
+        border-left: 780px solid transparent;
         z-index: -1;
     }
 
@@ -442,9 +442,9 @@ h4 {
     }
 
     hr {
-        margin-top: -18px;
-        width: 140px;
-        height: 10px;
+        margin-top: -1.5rem;
+        width: 8.75rem;
+        height: 0.625rem;
         background: #ebe2f5;
         border-bottom: none;
         margin-bottom: 50px;
@@ -458,10 +458,7 @@ h4 {
         .cell {
             border-radius: 4px;
             border: 1px solid #d5a7bd;
-            width: 368px;
-            margin: 0 auto;
-            padding-top: 32px;
-            padding-left: 25px;
+            padding: 2rem 1rem;
 
             &:first-child {
                 margin-left: 0;
@@ -474,9 +471,8 @@ h4 {
             dl {
                 dt {
                     color: white;
-                    font-size: 24px;
+                    font-size: 1.5rem;
                     font-weight: 700;
-                    line-height: 34px;
                 }
 
                 dd {
@@ -485,9 +481,8 @@ h4 {
 
                     a {
                         color:  #ede8f2;
-                        font-size: 16px;
+                        font-size: 0.9rem;
                         font-weight: 500;
-                        line-height: 26px;
                         text-decoration: underline;
                     }
                 }
