--- a/src/css/responsive.scss
+++ b/src/css/responsive.scss
@@ -12,10 +12,8 @@
 }
 
 @media (max-width: 1270px){
-    .intro {
-        .grid-x {
-            width: 100%;
-        }
+    .intro .grid-x, .services .grid-x {
+        width: 100%;
     }
 }
 
@@ -23,24 +21,24 @@
     html {
         font-size: 85%;
     }
+    
     .services {
-        height: auto;
         padding-bottom: 93px;
 
         #triangle-left  {
-            border-bottom: 747px solid #af246f;
-            border-left: 787px solid transparent;
+            border-bottom: 702px solid #af246f;
+            border-left: 742px solid transparent;
         }
 
         #triangle-middle {
-            border-bottom: 747px solid #a12577;
-            border-left: 787px solid transparent;
+            border-bottom: 702px solid #a12577;
+            border-left: 742px solid transparent;
         }
 
         #triangle-right { 
 
-            border-bottom: 747px solid #8f2782;
-            border-left: 787px solid transparent;
+            border-bottom: 702px solid #8f2782;
+            border-left: 742px solid transparent;
         }
 
         .grid-x {
@@ -97,6 +95,26 @@
         }
     }
 
+    .services {
+        padding-bottom: 93px;
+
+        #triangle-left  {
+            border-bottom: 682px solid #af246f;
+            border-left: 722px solid transparent;
+        }
+
+        #triangle-middle {
+            border-bottom: 682px solid #a12577;
+            border-left: 722px solid transparent;
+        }
+
+        #triangle-right { 
+
+            border-bottom: 682px solid #8f2782;
+            border-left: 722px solid transparent;
+        }
+    }
+
     .why {
         .grid-x {
             .cell {
@@ -126,6 +144,24 @@
 @media (max-width: 1023px){
     html {
         font-size: 70%;
+    }
+
+    .services {
+
+        #triangle-left  {
+            border-bottom: 668px solid #af246f;
+            border-left: 708px solid transparent;
+        }
+
+        #triangle-middle {
+            border-bottom: 668px solid #a12577;
+            border-left: 708px solid transparent;
+        }
+
+        #triangle-right { 
+            border-bottom: 668px solid #8f2782;
+            border-left: 708px solid transparent;
+        }
     }
 
     .why {
@@ -171,10 +207,6 @@
     .services {
         @include background(0deg, 90deg, #af246f, 0%, #a12577, 100%);
         padding-bottom: 63px;
-
-        #triangle-left, #triangle-middle, #triangle-right {
-            display: none;
-        }
 
         .grid-x {
             width: 480px;
