--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -400,7 +400,6 @@ h4 {
 }
 
 .services {
-
     background:  #b7236a;
     position: relative;
     z-index: 1;
@@ -492,20 +491,20 @@ h4 {
 }
 
 .why {
-    padding: 100px 20px;
-    width: 100%;
+    padding: 0px 50px 100px 50px;
 
     h4 {
         color:  $color-primary;
         position: relative;
         z-index: 1;
         text-align: center;
+        font-size: 1.6rem;
     }
 
     hr {
-        margin-top: -18px;
-        width: 275px;
-        height: 10px;
+        margin-top: -1.5rem;
+        width: 14rem;
+        height: 0.625rem;
         background: #ebe2f5;
         border-bottom: none;
         margin-bottom: 50px;
@@ -515,6 +514,7 @@ h4 {
     }
 
     .grid-x {
+        width: $container-xlarge;
         margin: 0 auto;
 
         .cell {
@@ -525,15 +525,14 @@ h4 {
 
                 li {
                     color:  #5d5b5b;
-                    font-size: 18px;
+                    font-size: 1.125rem;
                     font-weight: 400;
-                    line-height: 24px;
-                    padding-bottom: 30px;
+                    padding-bottom: 1.875rem;
                 }
             }
 
             &.checkmark, &.cross {
-                padding: 0 50px;
+                padding: 0 2.5rem;
             }
 
             &.checkmark {
@@ -542,9 +541,9 @@ h4 {
                         content: ' ';
                         float: left;
                         margin-top: 3px;
-                        margin-left: -2.5em;
-                        width: 25px;
-                        height: 25px;
+                        margin-left: -2.5rem;
+                        width: 1.563rem;
+                        height: 1.563rem;
                         display: block;
                         background: url("../graphics/svg/noun_1016411.svg") center center no-repeat;
                     }
@@ -557,9 +556,9 @@ h4 {
                         content: ' ';
                         float: left;
                         margin-top: 5px;
-                        margin-left: -2.5em;
-                        width: 22px;
-                        height: 22px;
+                        margin-left: -2.5rem;
+                        width: 1.375rem;
+                        height: 1.375rem;
                         display: block;
                         background: url("../graphics/svg/cross.svg") center center no-repeat;
                     }
