--- a/src/css/responsive.scss
+++ b/src/css/responsive.scss
@@ -12,7 +12,7 @@
 }
 
 @media (max-width: 1270px){
-    .intro .grid-x, .services .grid-x, .why .grid-x {
+    .intro .grid-x, .services .grid-x, .why .grid-x, .footer .grid-container {
         width: 100%;
     }
 }
@@ -164,14 +164,6 @@
             }
         }
     }
-
-    .footer {
-        .grid-x {
-            .large-5, .large-8 {
-                padding-top: 0;
-            }
-        }
-    }
 }
 
 @media (max-width: 980px){
@@ -206,9 +198,17 @@
     }
 
     .footer {
-        p, a {
-            font-size: 18px;
-        }
+        .grid-container {
+            .grid-x {
+                .large-5, .large-8 {
+                    padding-top: 0;
+                }
+    
+                .small-3 {
+                    width: 50px;
+                }
+            }
+        } 
     }
 }
 
@@ -217,6 +217,16 @@
         .grid-x {
             .cell {
                 padding-bottom: calc((50% - 1.875rem)*0.75);
+            }
+        }
+    }
+
+    .footer {
+        .grid-container {
+            .grid-x {
+                .large-8, .large-5 {
+                    padding: 0;
+                }
             }
         }
     }
@@ -325,6 +335,16 @@
     .why {
         padding-bottom: 50px;
     }
+
+    .footer {
+        .grid-container {
+            .grid-x {
+                .large-4 {
+                    padding: 0;
+                }
+            }
+        }
+    }
 }
 
 @media (max-width: 639px){
@@ -337,14 +357,6 @@
             .cell {
                 width: 100%;
                 padding-bottom: calc((100% - 1.875rem)*0.75);
-            }
-        }
-    }
-
-    .footer {
-        .grid-x {
-            .large-4 {
-                padding-top: 0;
             }
         }
     }
