--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -15,6 +15,11 @@
     background: white;
 }
 
+h1 {
+    font-size: 3.625rem;
+    font-weight: 900;
+}
+
 h2 {
     font-size: 2.188rem;
     color: $color-primary;
@@ -293,17 +298,13 @@ h4 {
 
         h1 {
             color: white;
-            font-size: 58px;
-            font-weight: 900;
-            line-height: 1.194;
             padding: 0 20px;
         }
     
         p {
             color:  white;
-            font-size: 26px;
+            font-size: 1.625rem;
             font-weight: 300;
-            line-height: 26px;
             padding: 20px;
         }
     }
@@ -347,7 +348,7 @@ h4 {
     z-index: 3;
     background: white;
     position: relative;
-    padding: 0px 50px 100px 50px;
+    padding: 0px 150px 100px 150px;
 
     #triangle-grey {
         position: absolute;
@@ -367,6 +368,7 @@ h4 {
             z-index: 2;
 
             h2 {
+                font-size: 2rem;
                 margin-bottom: 2.813rem
             }
 
@@ -492,7 +494,7 @@ h4 {
 
                     a {
                         color:  #ede8f2;
-                        font-size: 0.9rem;
+                        font-size: 0.7rem;
                         font-weight: 500;
                         text-decoration: underline;
                     }
