changed text of back button of drill down, darken social icons on hover and remove focus of close button in mobile menu

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -47,10 +47,14 @@ h4 {
             display: table-cell;
             vertical-align: middle;
 
-            .image {
-                width: 70px;
-                height: 70px;
+            a {
                 float: left;
+
+                .image {
+                    width: 70px;
+                    height: 70px;
+                    float: left;
+                }
             }
 
             .text {
@@ -187,10 +191,15 @@ h4 {
 
         .close-button {
             z-index: 10;
+
+            &:focus { 
+                outline: 0; 
+            }
+
             img {
+                margin-top: 10px;
                 width: 20px;
                 height: 20px;
-
             }
         }
 
@@ -226,8 +235,8 @@ h4 {
                 border: 1px solid rgb(228, 228, 228);
                 display: inherit;
                 align-items: center;
-                padding: 10px;
-                margin: 10px;
+                padding: 11px;
+                margin: 10px 5px;
 
                 &.is-active, &:hover {
                     background: rgb(184, 20, 76);
@@ -240,14 +249,31 @@ h4 {
 
                 &.instagram {
                     background: $instagram;
+
+                    &:hover {
+                        background: darken($instagram, 5%);
+                    }
                 }
         
                 &.linkedin {
                     background: $linkedin;
+
+                    &:hover {
+                        background: darken($linkedin, 5%);
+                    }
                 }
         
                 &.facebook {
                     background: $facebook;
+                    padding: 13px;
+
+                    &:hover {
+                        background: darken($facebook, 5%);
+                    }
+
+                    img {
+                        margin-top: -3px;
+                    }
                 }
             }
         }
@@ -822,12 +848,14 @@ h4 {
                 width: 240px;
                 height: 70px;
                 margin-left: -67px;
-        
-                .image {
-                    width: 50px;
-                    height: 50px;
-                    float: left;
-                    margin-top: 10px;
+
+                a {
+                    .image {
+                        width: 50px;
+                        height: 50px;
+                        float: left;
+                        margin-top: 10px;
+                    }
                 }
         
                 .text {
